Fix: Mockito testing